Fixed some style issues with the charts